--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,10 @@ markdown: rdiscount
 # site url
 url: sparanoid.com
 
+# Focus domain name to site.url, used for production only
+prod: true
+#prod: false
+
 # used by images inserted in posts
 file: http://rsrc.sparanoid.com
 
