--- a/_config.yml
+++ b/_config.yml
@@ -7,27 +7,24 @@ permalink: /:categories/:title
 markdown: rdiscount
 
 # site url
-url: sparanoid.com
+url: saitowu.github.com
 
 # Focus domain name to site.url, used for CloudFront production only
 # prod: true
-prod: false
+prod: true
 
 # used by images inserted in posts
-file: http://rsrc.sparanoid.com
-
-# used by specified background images
-assets-cdn: http://a2.sparanoid.com
+file: http://i.imgur.com/
 
 # used by css url in default.html and index.xml
 css-path: /css
 
 # custom vars, most of them are used by index.xml
-name: Sparanoid
-full-name: Tunghiao Liu
-email: info@sparanoid.com
-slogan: I make things that don't suck.
-twitter: sparanoid
+name: Saito
+full-name: Saito Wu
+email: saitowu@gmail.com
+slogan: worstest coder ever.
+twitter: SaitoWu
 
 # fire up a localhost and auto generate when files change
 auto: true
@@ -35,8 +32,9 @@ server: ture
 server_port: 4321
 
 # exclude files for generated site
-exclude: 
+exclude:
 - README.md
 - LICENSE
 - Rakefile
 - nite.tmproj
+
